syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.zktony.proto";
option java_outer_classname = "LogProto";

package log;

// service for log
service LogService {
  // rpcs for log
  rpc Query (LogRequestQuery) returns (LogReplyQuery) {}
  rpc Insert (Log) returns (LogReply) {}
  rpc InsertBatch (LogList) returns (LogReply) {}
  rpc Update (Log) returns (LogReply) {}
  rpc UpdateBatch (LogList) returns (LogReply) {}
  rpc Delete (Log) returns (LogReply) {}
  rpc DeleteBatch (LogList) returns (LogReply) {}
}

message Log {
  string id = 1;
  string sub_id = 2;
  string log_type = 3;
  string content = 4;
  string create_time = 5;
}

message LogList { repeated Log list = 1; }

message LogRequestQuery {
  uint64 page_size = 1;
  uint64 page = 2;
  string id = 3;
  string sub_id = 4;
  string log_type = 5;
}

message LogReplyQuery { 
  repeated Log list = 1; 
  uint64 total = 2; 
}

message LogReply { bool success = 1; }