syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.zktony.proto";
option java_outer_classname = "TestProto";

package test;

// The greeting service definition.
service TestService {
  // Sends a greeting
  rpc Test (TestRequest) returns (TestReply) {}
}

// The request message containing the user's name.
message TestRequest {
  string name = 1;
}

// The response message containing the greetings
message TestReply {
  string message = 1;
}